[package]
name = "traq-ws-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.21", features = ["serde"] }
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
anyhow = "1.0.61"
tokio = { version = "1.20.1", features = ["full"] }
reqwest = { version = "0.11.11", features = ["json"] }
url = "2.2.2"
http = "0.2.8"
tokio-tungstenite = { version = "0.17.2", features = ["native-tls"] }
futures = "0.3.21"
futures-util = "0.3.21"
paste = "1.0.8"
arrayvec = "0.7.2"
async-trait = "0.1.57"

[dependencies.macros]
version = "0.1.0"
path = "../macros"
