[package]
name = "traq-ws-bot"
version = "0.2.0"
edition = "2021"
description = "traQ websocket bot wrapper"

repository = "https://github.com/SSlime-s/traq-ws-bot-rs"
license = "MIT"

readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
openapi = ["serde_derive", "uuid/serde", "reqwest/multipart"]

[dependencies]
chrono = { version = "0.4.21", features = ["serde"] }
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
anyhow = "1.0.61"
tokio = { version = "1.20.1", features = ["full"] }
reqwest = { version = "0.11.11", default-features = false, features = [
  "json",
  "rustls-tls",
] }
url = "2.2.2"
http = "0.2.8"
tokio-tungstenite = { version = "0.17.2", features = [
  "rustls-tls-native-roots",
] }
futures = "0.3.21"
futures-util = "0.3.21"
paste = "1.0.8"
async-trait = "0.1.57"
log = "0.4.17"

[dependencies.serde_derive]
version = "^1.0"
optional = true

[dependencies.uuid]
version = "^1.0"
optional = true
