[package]
name = "echo-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.20.1", features = ["full"] }
traq-ws-bot-rs = { version = "0.1.0", path = "../bot-core" }
