[package]
name = "openapi"
version = "3.0.0"
authors = ["OpenAPI Generator team and contributors"]
description = "traQ v3 API"
license = "MIT"
edition = "2018"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde"] }
[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]
